crates/toml/tests/snapshots/invalid/float/trailing-exp.stderr
TOML parse error at line 1, column 20
  |
1 | trailing-exp = 0.0E
  |                    ^
invalid floating-point number
